--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -261,6 +261,18 @@
   organization={Association for Computational Linguistics}
 }
 
+# Human estimates of word pair synonymy
+@article{rubenstein1965contextual,
+  title={Contextual correlates of synonymy},
+  author={Rubenstein, Herbert and Goodenough, John B},
+  journal={Communications of the ACM},
+  volume={8},
+  number={10},
+  pages={627--633},
+  year={1965},
+  publisher={ACM}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
